--- a/locales/da.json
+++ b/locales/da.json
@@ -3,42 +3,42 @@
     "debug_zone_exited": "Left zone: %s",
     "debug_zone_entered": "Entered zone: %s",
     "no_spawn_found": "Config.Spawn er ikke sat",
-    "no_clothing_system": "No supported clothing system detected",
+    "no_clothing_system": "Intet tøjsystem fundet",
     "not_admin": "Du er ikke admin",
     "no_waypoint_found": "Ingen waypoint fundet",
     "must_provide_id": "Du skal give et ID",
-    "invalid_player_id": "Invalid player ID",
-    "player_not_found": "Player ikke fundet",
-    "usage_setrank": "Brug: /setrank [playerId] [nyRank]",
+    "invalid_player_id": "Invalid spiller ID",
+    "player_not_found": "Spiller ikke fundet",
+    "usage_setrank": "Brug: /setrank [spillerId] [nyRank]",
     "your_rank_title": "Din Rank",
     "your_rank_desc": "Din Rank: %s",
     "revived_by_admin": "Du er blevet revived af en admin",
-    "you_are_not_dead": "Du er ikke dead",
+    "you_are_not_dead": "Du er ikke død",
     "callback_not_found": "Callback ikke fundet: %s",
-    "resource_wrong_name": "Ressourcen skal hedde '%s' for at virke.",
-    "no_identifiers_found": "Ingen identifiers fundet for player \"%s\" (source %s)",
+    "resource_wrong_name": "Resourcen skal hedde '%s' for at virke.",
+    "no_identifiers_found": "Ingen identifiers fundet for spiller \"%s\" (source %s)",
     "updated_last_connected": "Updated last_connected for \"%s\" til %s",
-    "invalid_player_license": "Invalid player eller license. Spring DB insert over.",
+    "invalid_player_license": "Invalid spiller eller license. Spring DB insert over.",
     "oxmysql_missing": "oxmysql kører ikke eller er nede.",
     "updated_steam_name": "Updated steam navn: \"%s\" (var %s)",
-    "player_exists": "Player \"%s\" findes allerede. Rank: %s, Money: %s",
-    "new_player_added": "Ny player added: \"%s\" (DB ID: %s)",
+    "player_exists": "Spiller \"%s\" findes allerede. Rank: %s, Money: %s",
+    "new_player_added": "Ny spiller added: \"%s\" (DB ID: %s)",
     "could_not_check_update": "Kunne ikke checke for updates. (Kontakt Support)",
     "first_time_join": "Første gang join for %s",
-    "welcome_back": "Welcome back, %s",
+    "welcome_back": "Velkommen tilbage, %s",
     "last_connected_updated": "Sidst connected opdateret for: %s",
     "no_user_found_db": "No user found i DB for: %s",
     "missing_valid_license": "Mangler valid license. Restart venligst FiveM eller Steam.",
-    "player_identifiers": "Player identifiers:",
-    "player_connected_rank": "Player \"%s\" connected med rank \"%s\".",
-    "player_disconnected": "Player \"%s\" disconnected. Reason: %s",
+    "player_identifiers": "Spiller identifiers:",
+    "player_connected_rank": "Spiller \"%s\" connected med rank \"%s\".",
+    "player_disconnected": "Spiller \"%s\" disconnected. Reason: %s",
     "invalid_rank_attempt": "Forsøg på at sætte invalid rank \"%s\"",
     "invalid_rank_notify": "Invalid Rank: %s",
     "no_license_found": "Ingen license fundet.",
     "rank_not_found_db": "Rank ikke fundet i DB.",
     "rank_updated": "\"%s\" rank opdateret, fra %s til %s",
     "no_rank_updated": "Ingen rank opdateret for %s",
-    "player_not_found_db": "Player ikke fundet i DB: %s",
-    "player_revived": "Player genoplivet!",
-    "player_killed": "Player dræbt!"
+    "player_not_found_db": "Spiller ikke fundet i DB: %s",
+    "player_revived": "Spiller genoplivet!",
+    "player_killed": "Spiller dræbt!"
 }
