--- a/locales/da.json
+++ b/locales/da.json
@@ -1,44 +1,54 @@
 {
-    "debug_spawn_coords": "Spawner spiller ved coords: X: %s, Y: %s, Z: %s",
-    "debug_zone_exited": "Left zone: %s",
-    "debug_zone_entered": "Entered zone: %s",
-    "no_spawn_found": "Config.Spawn er ikke sat",
-    "no_clothing_system": "Intet tøjsystem fundet",
+    "debug_spawn_coords": "Spawner spiller ved koordinater: X: %s, Y: %s, Z: %s",
+    "debug_zone_exited": "Forlod zone: %s",
+    "debug_zone_entered": "Gik ind i zone: %s",
+    "no_spawn_found": "Config.Spawn er ikke defineret",
+    "no_clothing_system": "Intet understøttet tøj-system fundet",
     "not_admin": "Du er ikke admin",
     "no_waypoint_found": "Ingen waypoint fundet",
-    "must_provide_id": "Du skal give et ID",
-    "invalid_player_id": "Invalid spiller ID",
-    "player_not_found": "Spiller ikke fundet",
-    "usage_setrank": "Brug: /setrank [spillerId] [nyRank]",
-    "your_rank_title": "Din Rank",
-    "your_rank_desc": "Din Rank: %s",
-    "revived_by_admin": "Du er blevet revived af en admin",
+    "must_provide_id": "Du skal angive et ID",
+    "invalid_player_id": "Ugyldigt spiller-ID",
+    "target_id": "Indsæt target ID her",
+    "player_not_found": "Spiller blev ikke fundet",
+    "usage_setrank": "Brug: /setrank [playerId] [newRank]",
+    "new_rank": "Ny Rang",
+    "your_rank_title": "Din Rang",
+    "your_rank_desc": "Din Rang: %s",
+    "revived_by_admin": "Du er blevet genoplivet af en admin",
     "you_are_not_dead": "Du er ikke død",
     "callback_not_found": "Callback ikke fundet: %s",
-    "resource_wrong_name": "Resourcen skal hedde '%s' for at virke.",
+    "resource_wrong_name": "Ressourcen skal hedde '%s' for at virke.",
     "no_identifiers_found": "Ingen identifiers fundet for spiller \"%s\" (source %s)",
-    "updated_last_connected": "Updated last_connected for \"%s\" til %s",
-    "invalid_player_license": "Invalid spiller eller license. Spring DB insert over.",
-    "oxmysql_missing": "oxmysql kører ikke eller er nede.",
-    "updated_steam_name": "Updated steam navn: \"%s\" (var %s)",
-    "player_exists": "Spiller \"%s\" findes allerede. Rank: %s, Money: %s",
-    "new_player_added": "Ny spiller added: \"%s\" (DB ID: %s)",
-    "could_not_check_update": "Kunne ikke checke for updates. (Kontakt Support)",
-    "first_time_join": "Første gang join for %s",
+    "updated_last_connected": "Opdaterede last_connected for \"%s\" til %s",
+    "invalid_player_license": "Ugyldig spiller eller licens. Springer DB-indskrivning over.",
+    "oxmysql_missing": "oxmysql kører ikke eller er utilgængelig.",
+    "updated_steam_name": "Opdaterede steam-navn: \"%s\" (var %s)",
+    "player_exists": "Spiller \"%s\" findes allerede. Rang: %s, Penge: %s",
+    "new_player_added": "Ny spiller tilføjet: \"%s\" (DB ID: %s)",
+    "could_not_check_update": "Kunne ikke tjekke for opdateringer. (Kontakt support)",
+    "first_time_join": "Førstegangs-join for %s",
     "welcome_back": "Velkommen tilbage, %s",
-    "last_connected_updated": "Sidst connected opdateret for: %s",
-    "no_user_found_db": "No user found i DB for: %s",
-    "missing_valid_license": "Mangler valid license. Restart venligst FiveM eller Steam.",
-    "player_identifiers": "Spiller identifiers:",
-    "player_connected_rank": "Spiller \"%s\" connected med rank \"%s\".",
-    "player_disconnected": "Spiller \"%s\" disconnected. Reason: %s",
-    "invalid_rank_attempt": "Forsøg på at sætte invalid rank \"%s\"",
-    "invalid_rank_notify": "Invalid Rank: %s",
-    "no_license_found": "Ingen license fundet.",
-    "rank_not_found_db": "Rank ikke fundet i DB.",
-    "rank_updated": "\"%s\" rank opdateret, fra %s til %s",
-    "no_rank_updated": "Ingen rank opdateret for %s",
-    "player_not_found_db": "Spiller ikke fundet i DB: %s",
+    "last_connected_updated": "Sidste forbindelsestid opdateret for: %s",
+    "no_user_found_db": "Ingen bruger fundet i DB for: %s",
+    "missing_valid_license": "Mangler gyldig licens. Genstart FiveM eller Steam.",
+    "player_identifiers": "Spiller-identifiers:",
+    "player_connected_rank": "Spiller \"%s\" forbundet med rang \"%s\".",
+    "player_disconnected": "Spiller \"%s\" forlod. Grund: %s",
+    "invalid_rank_attempt": "Forsøg på at sætte ugyldig rang \"%s\"",
+    "invalid_rank_notify": "Ugyldig Rang: %s",
+    "no_license_found": "Ingen licens fundet.",
+    "rank_not_found_db": "Rang ikke fundet i databasen.",
+    "rank_updated": "\"%s\" rang opdateret fra %s til %s",
+    "no_rank_updated": "Ingen rang opdateret for %s",
+    "player_not_found_db": "Spiller ikke fundet i databasen: %s",
     "player_revived": "Spiller genoplivet!",
-    "player_killed": "Spiller dræbt!"
+    "player_killed": "Spiller dræbt!",
+    "vehicle_deleted": "Køretøj slettet!",
+    "vehicle_delete_error": "Kunne ikke slette køretøj",
+    "no_vehicles": "Intet køretøj i nærheden fundet",
+    "usage_car": "Brug: /car [model eller hash]",
+    "model_or_hash": "Køretøjsmodel eller hash",
+    "invalid_model": "Ugyldig køretøjsmodel eller hash.",
+    "failed_vehicle": "Køretøjsmodel kunne ikke indlæses.",
+    "spawned_vehicle": "Spawner køretøj: %s"
 }
