--- a/locales/pl.json
+++ b/locales/pl.json
@@ -1,44 +1,54 @@
 {
-    "debug_spawn_coords": "Pojawianie się gracza na współrzędnych: X: %s, Y: %s, Z: %s",
-    "debug_zone_exited": "Opuściłeś strefę: %s",
+    "debug_spawn_coords": "Respienie gracza na koordynatach: X: %s, Y: %s, Z: %s",
+    "debug_zone_exited": "Opuszczono strefę: %s",
     "debug_zone_entered": "Wszedłeś do strefy: %s",
     "no_spawn_found": "Config.Spawn nie jest zdefiniowany",
-    "no_clothing_system": "Nie wykryto wspieranego systemu ubrań",
+    "no_clothing_system": "Nie wykryto obsługiwanego systemu ubrań",
     "not_admin": "Nie jesteś administratorem",
-    "no_waypoint_found": "Nie znaleziono waypointu",
-    "must_provide_id": "Musisz podać identyfikator (ID)",
+    "no_waypoint_found": "Nie znaleziono punktu na mapie",
+    "must_provide_id": "Musisz podać ID",
     "invalid_player_id": "Nieprawidłowe ID gracza",
+    "target_id": "Wpisz ID celu tutaj",
     "player_not_found": "Nie znaleziono gracza",
     "usage_setrank": "Użycie: /setrank [playerId] [newRank]",
-    "your_rank_title": "Twoja ranga",
-    "your_rank_desc": "Twoja ranga: %s",
-    "revived_by_admin": "Zostałeś przywrócony do życia przez administratora",
+    "new_rank": "Nowa Ranga",
+    "your_rank_title": "Twoja Ranga",
+    "your_rank_desc": "Twoja Ranga: %s",
+    "revived_by_admin": "Zostałeś ożywiony przez administratora",
     "you_are_not_dead": "Nie jesteś martwy",
-    "callback_not_found": "Nie znaleziono funkcji zwrotnej (callback): %s",
-    "resource_wrong_name": "Zasób musi nosić nazwę '%s', aby działał.",
-    "no_identifiers_found": "Nie znaleziono identyfikatorów dla gracza \"%s\" (źródło: %s)",
-    "updated_last_connected": "Zaktualizowano czas ostatniego połączenia dla \"%s\" na %s",
-    "invalid_player_license": "Nieprawidłowy gracz lub licencja. Pomijanie zapisu do bazy danych.",
+    "callback_not_found": "Callback nie znaleziony: %s",
+    "resource_wrong_name": "Resource musi nazywać się '%s', aby działać.",
+    "no_identifiers_found": "Nie znaleziono identyfikatorów dla gracza \"%s\" (source %s)",
+    "updated_last_connected": "Zaktualizowano last_connected dla \"%s\" na %s",
+    "invalid_player_license": "Nieprawidłowy gracz lub licencja. Pomijam zapis do bazy.",
     "oxmysql_missing": "oxmysql nie działa lub jest niedostępny.",
-    "updated_steam_name": "Zaktualizowano nazwę Steam: \"%s\" (wcześniej: %s)",
+    "updated_steam_name": "Zaktualizowano nazwę Steam: \"%s\" (poprzednio %s)",
     "player_exists": "Gracz \"%s\" już istnieje. Ranga: %s, Pieniądze: %s",
-    "new_player_added": "Dodano nowego gracza: \"%s\" (ID w bazie: %s)",
-    "could_not_check_update": "Nie można sprawdzić aktualizacji. (Skontaktuj się z pomocą techniczną)",
-    "first_time_join": "Pierwsze dołączenie: %s",
+    "new_player_added": "Dodano nowego gracza: \"%s\" (DB ID: %s)",
+    "could_not_check_update": "Nie udało się sprawdzić aktualizacji. (Skontaktuj się z supportem)",
+    "first_time_join": "Pierwsze dołączenie gracza %s",
     "welcome_back": "Witaj ponownie, %s",
-    "last_connected_updated": "Zaktualizowano czas ostatniego połączenia dla: %s",
-    "no_user_found_db": "Nie znaleziono użytkownika w bazie danych dla: %s",
+    "last_connected_updated": "Zaktualizowano ostatnie połączenie dla: %s",
+    "no_user_found_db": "Nie znaleziono użytkownika w bazie: %s",
     "missing_valid_license": "Brak ważnej licencji. Uruchom ponownie FiveM lub Steam.",
     "player_identifiers": "Identyfikatory gracza:",
-    "player_connected_rank": "Gracz \"%s\" połączył się z rangą \"%s\".",
-    "player_disconnected": "Gracz \"%s\" rozłączył się. Powód: %s",
+    "player_connected_rank": "Gracz \"%s\" połączony z rangą \"%s\".",
+    "player_disconnected": "Gracz \"%s\" opuścił serwer. Powód: %s",
     "invalid_rank_attempt": "Próba ustawienia nieprawidłowej rangi \"%s\"",
-    "invalid_rank_notify": "Nieprawidłowa ranga: %s",
+    "invalid_rank_notify": "Nieprawidłowa Ranga: %s",
     "no_license_found": "Nie znaleziono licencji.",
     "rank_not_found_db": "Nie znaleziono rangi w bazie danych.",
-    "rank_updated": "Ranga \"%s\" zaktualizowana: z %s na %s",
+    "rank_updated": "Zaktualizowano rangę \"%s\" z %s na %s",
     "no_rank_updated": "Nie zaktualizowano rangi dla %s",
-    "player_not_found_db": "Nie znaleziono gracza w bazie danych: %s",
-    "player_revived": "Gracz przywrócony do życia!",
-    "player_killed": "Gracz zabity!"
+    "player_not_found_db": "Nie znaleziono gracza w bazie: %s",
+    "player_revived": "Gracz ożywiony!",
+    "player_killed": "Gracz zabity!",
+    "vehicle_deleted": "Pojazd usunięty!",
+    "vehicle_delete_error": "Nie udało się usunąć pojazdu",
+    "no_vehicles": "Nie znaleziono pobliskiego pojazdu",
+    "usage_car": "Użycie: /car [model lub hash]",
+    "model_or_hash": "Model pojazdu lub hash",
+    "invalid_model": "Nieprawidłowy model lub hash pojazdu.",
+    "failed_vehicle": "Nie udało się załadować modelu pojazdu.",
+    "spawned_vehicle": "Stworzono pojazd: %s"
 }
